--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -1,6 +1,7 @@
 // Container
 $container: 1250px;
 $maxsize: 1396px;
+$smallsize: 1150px;
 
 //Fonts
 $font-sansserif: Arial, Helvetica, sans-serif;
