--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,6 +30,9 @@
 @import "patterns/_unproject_home";
 @import "patterns/_presse_home";
 @import "patterns/_bref_home";
+@import "patterns/_complex_page_intro";
+@import "patterns/_video";
+@import "patterns/_governance";
 
 //Pages
 @import "pages/_404";
