--- a/scss/patterns/_header.scss
+++ b/scss/patterns/_header.scss
@@ -20,9 +20,13 @@
     background: $white;
     width: 100%;
     height:0;
+    display: none;
     &.is-visible{
       height:47px;
       transition: height .3s ease;
+    }
+    @media screen and (min-width: $tablet-lage){
+      display: block;
     }
   }
   &__logo {
