--- a/scss/patterns/_video.scss
+++ b/scss/patterns/_video.scss
@@ -1,7 +1,6 @@
 .video{
   margin:60px 0;
   .complex-content {
-    display: flex;
     .video-content{
       *{
         height:100%;
@@ -18,7 +17,6 @@
     font-family: $font-bold;
     color: $navy-blue;
     font-size: 32px;
-    text-transform: uppercase;
   }
   .tabs{
     li{
@@ -27,9 +25,20 @@
         padding-bottom: 16px;
         border-top:3px solid rgba($color-readmore, .33);
         width: 100%;
-
         &:hover, &.is-active{
           border-top:3px solid $navy-blue;
+          padding-left: 52px;
+          &:before{
+            border-left-color: $navy-blue;
+            left: 27px;
+          }
+          &:after{
+            background: $navy-blue;
+            left: 0;
+          }
+          .title{
+            color:$navy-blue !important;
+          }
         }
         .title{
           font-family: $font-medium;
@@ -40,4 +49,12 @@
       }
     }
   }
+}
+.complex-content{
+  &.wrapper{
+    .container{
+      @include display-flex();
+    }
+  }
+
 }
