--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,8 @@
 @import "patterns/_complex_page_intro";
 @import "patterns/_video";
 @import "patterns/_governance";
+@import "patterns/_keyfigures";
+@import "patterns/_activities";
 
 //Pages
 @import "pages/_404";
